bugfix distorting all widgets in customize

--- a/chrome/skin/common/australisBar.css
+++ b/chrome/skin/common/australisBar.css
@@ -18,7 +18,12 @@
 	
 	/* trying to use our special widgets in the menu-panel and overflow panel */
 	
-	.customization-palette .toolbarbutton-1,
+	.customization-palette #thePuzzlePiece-special-separator,
+	.customization-palette #thePuzzlePiece-special-spacer,
+	.customization-palette #thePuzzlePiece-special-spring {
+		margin: 2px 1em;
+	}
+	
 	toolbarspacer[cui-areatype="menu-panel"] {
 		min-width: calc(22.35em /3);
 		width: calc(22.35em /3);
